[package]
name = "acolyte"
version = "0.1.0"
authors = ["kilometers <kilo@meters.sh>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
env_logger = "0.7"
tera = "1"
actix-web = "2"
actix-files = "0.2"
actix-rt = "1"
