[package]
name = "acolyte"
version = "0.1.0"
authors = ["kilometers <kilo@meters.sh>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9"
actix-files = "0.2"
actix-identity = "0.2"
actix-rt = "1"
actix-web-actors = "2"
actix-web = "2"
env_logger = "0.7"
rand = "0.7"
serde = "1"
serde_json = "1"
tera = "1"
uuid = { version = "0.8", features = ["serde", "v4"] }
