[package]
name = "acolyte"
version = "0.1.0"
authors = ["kilometers <kilo@meters.sh>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9"
actix-files = "0.2"
actix-identity = "0.2"
actix-rt = "1"
actix-web-actors = "2"
actix-web = "2"
askama = "0.9"
ammonia = "3"

# TODO: Switch to 3.0 once it comes out
clap = { git = "https://github.com/clap-rs/clap/" }
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1", features = ["postgres",  "chrono", "r2d2"] }
env_logger = "0.7"
lazy_static = "1"
log = "0.4"
fern = "0.5"
rand = "0.7"
regex =  "1"
rust-argon2 = "0.5"
rust-embed = "5"
serde = "1"
serde_json = "1"
serde_yaml = "0.8"
anyhow = "1"
mime_guess = "2"
pulldown-cmark = "0.7"
uuid = { version = "0.8", features = ["serde", "v4"] }
